@@ -35,6 +35,8 @@ dpkg (1.16.3) UNRELEASED; urgency=low
     «dpkg-divert --add --rename». Closes: #588077
   * Clarify dpkg-gensymbols(1) by way of examples that architecture wildcards
     are supported in symbols files. Closes: #670048
+  * Fix memory leak due to Dpkg::Control objects not being garbage-collected.
+    Thanks to Ben Harris <bjh21@cam.ac.uk>. Closes: #669012
 
   [ Helge Kreutzmann ]
   * Fix a typo in man/dpkg-buildflags.1.
